--- a/i3.configlink/config
+++ b/i3.configlink/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run -lines 3 -monitor 0 -eh 2 -width 100 -padding 640 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -161,11 +161,33 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# colour variables
+set $bg-color            #2F343F
+set $inactive-bg-color   #2F343F
+set $text-color          #F3F4F5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+# window colours
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
         position top
+        colors {
+                background $bg-color
+                separator #757575
+                #                  border             background         text
+                focused_workspace  $bg-color          $bg-color          $text-color
+                inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+                urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+        }
 }
 
 # lock
@@ -192,4 +214,5 @@ exec_always xmodmap -e 'clear lock' -e 'keycode 0x42 = Escape' # set caps_lock a
 
 # Startup
 exec_always ~/.config/i3/screenlayout.sh
-# exec --no-startup-id compton -f
+exec_always --no-startup-id compton --config ~/.config/i3/compton.conf
+
