--- a/i3.configlink/config
+++ b/i3.configlink/config
@@ -178,7 +178,7 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks -c ~/.config/i3/i3blocks.conf
         position top
         colors {
                 background $bg-color
@@ -212,6 +212,11 @@ workspace $workspace10 output DP-1
 # Keys
 exec --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_space_toggle"
 exec_always xmodmap -e 'clear lock' -e 'keycode 0x42 = Escape' # set caps_lock as escape
+
+# Multimedia keys
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec amixer -q set Master toggle && pkill -RTMIN+1 i3blocks
 
 # Startup
 exec_always ~/.config/i3/screenlayout.sh
