--- a/i3.configlink/config
+++ b/i3.configlink/config
@@ -216,7 +216,7 @@ exec_always xmodmap -e 'clear lock' -e 'keycode 0x42 = Escape' # set caps_lock a
 # Multimedia keys
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute && pkill -RTMIN+1 i3blocks
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioMute exec amixer -q set Master toggle && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec amixer -q -D pulse set Master 1+ toggle && pkill -RTMIN+1 i3blocks
 
 # Startup
 exec_always ~/.config/i3/screenlayout.sh
