--- a/i3.configlink/i3blocks.conf
+++ b/i3.configlink/i3blocks.conf
@@ -37,7 +37,7 @@ color=#E0E0E0
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=amixer get Master | grep -E -o '[0-9]{1,3}?%' | head -1
+command=amixer get Master | grep '%' | awk -F'(\\[|\\]|\\s)' '{print $7"-"$13}'
 label=VOL
 #label=♪
 instance=Master
