--- a/i3.configlink/config
+++ b/i3.configlink/config
@@ -198,6 +198,7 @@ assign [class="Google-chrome"] $workspace1
 assign [class="X-terminal-emulator"] $workspace2
 assign [class="jetbrains-idea-ce"] $workspace3
 assign [class="Slack"] $workspace4
+assign [class="Insomnia"] $workspace5
 
 # workspace default monitors
 workspace $workspace1 output DP-1
