--- a/i3.configlink/config
+++ b/i3.configlink/config
@@ -197,8 +197,8 @@ bindsym XF86Sleep exec ~/.config/i3/lock.sh
 # default workspaces
 assign [class="Google-chrome"] $workspace1
 assign [class="X-terminal-emulator"] $workspace2
-assign [class="jetbrains-idea-ce"] $workspace3
-assign [class="jetbrains-idea"] $workspace3
+assign [class="jetbrains-idea-ce" window_type="normal"] $workspace3
+assign [class="jetbrains-idea" window_type="normal"] $workspace3
 assign [class="Slack"] $workspace4
 assign [class="Insomnia"] $workspace5
 
