Make nix packages support different systems

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ stow/fish/.config/fish/fish_read_history
 stow/fish/.config/fish/fish_variables
 stow/fish/.config/fish/fishd.784f436e8649
 stow/fish/.config/fish/functions
+stow/fish/.config/fish/fishd.*
 
 stow/vim/.vim/.netrwhist
