--- a/stow/tig/.tigrc
+++ b/stow/tig/.tigrc
@@ -1,5 +1,5 @@
-bind main I previous
-bind main K next
+bind generic I previous
+bind generic K next
 
 bind generic i move-up
 bind generic k move-down
