Add gnome terminal to i3 config

--- a/stow/i3/.config/i3/config
+++ b/stow/i3/.config/i3/config
@@ -210,6 +210,7 @@ bindsym XF86Sleep exec ~/.config/i3/lock.sh
 # default workspaces
 assign [class="Google-chrome"] $workspace1
 assign [class="X-terminal-emulator"] $workspace2
+assign [class="Gnome-terminal"] $workspace2
 assign [class="jetbrains-idea-ce" window_type="normal"] $workspace3
 assign [class="jetbrains-idea" window_type="normal"] $workspace3
 assign [class="Code" window_type="normal"] $workspace3
