--- a/stow/i3/.config/i3/config
+++ b/stow/i3/.config/i3/config
@@ -229,7 +229,7 @@ workspace $workspace9 output DP-1
 workspace $workspace10 output DP-1
 
 # Keys
-exec --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_space_toggle"
+exec_always --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_space_toggle"
 exec_always xmodmap -e 'clear lock' -e 'keycode 0x42 = Escape' # set caps_lock as escape
 
 # Multimedia keys
