Add `git fx` / `git rb` aliases

--- a/stow/git/.gitconfig.template
+++ b/stow/git/.gitconfig.template
@@ -29,6 +29,8 @@
     spush = !git submodule foreach --recursive git checkout master && git push --recurse-submodules=check
     show-files = show --pretty="" --name-only
     lift = !git fetch origin && git rebase origin/master
+    fx = commit --fixup
+    rb = rebase --autosquash -i
 [color]
     diff = auto
     status = auto
