--- a/stow/i3/.config/i3/i3blocks.conf
+++ b/stow/i3/.config/i3/i3blocks.conf
@@ -37,7 +37,7 @@ color=#E0E0E0
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=amixer get Master | grep '%' | awk -F'(\\[|\\]|\\s)' '{print $7"-"$13}'
+command=~/.config/i3/audio/volume
 label=VOL
 #label=♪
 instance=Master
