--- a/stow/i3/.config/i3/config
+++ b/stow/i3/.config/i3/config
@@ -11,6 +11,10 @@
 
 set $mod Mod4
 
+# Monitors
+set $primaryMonitor "DP-3"
+set $secondaryMonitor "eDP-1"
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -217,15 +221,16 @@ assign [class="Slack"] $workspace4
 assign [class="Insomnia"] $workspace5
 
 # workspace default monitors
-workspace $workspace1 output DisplayPort-0
-workspace $workspace2 output HDMI-A-0
-workspace $workspace3 output DisplayPort-0
-workspace $workspace4 output DisplayPort-0
-workspace $workspace5 output DisplayPort-0
-workspace $workspace6 output DisplayPort-0
-workspace $workspace8 output DisplayPort-0
-workspace $workspace9 output DisplayPort-0
-workspace $workspace10 output DisplayPort-0
+workspace $workspace1 output $primaryMonitor
+workspace $workspace2 output $primaryMonitor
+workspace $workspace3 output $primaryMonitor
+workspace $workspace4 output $primaryMonitor
+workspace $workspace5 output $primaryMonitor
+workspace $workspace6 output $primaryMonitor
+workspace $workspace7 output $secondaryMonitor
+workspace $workspace8 output $secondaryMonitor
+workspace $workspace9 output $secondaryMonitor
+workspace $workspace10 output $secondaryMonitor
 
 # Keys
 exec_always --no-startup-id "setxkbmap -model pc105 -layout us,gr -option grp:alt_space_toggle"
