--- a/stow/i3/.config/i3/i3blocks.conf
+++ b/stow/i3/.config/i3/i3blocks.conf
@@ -37,13 +37,17 @@ color=#E0E0E0
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-command=~/.config/i3/audio/volume
+command=~/.config/i3/bin/ui3-volume
 label=VOL
 #label=♪
 instance=Master
 #instance=PCM
 interval=once
 signal=1
+
+[battery]
+command=~/.config/i3/bin/ui3-battery
+interval=30
 
 # Memory usage
 #
