--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ stow/fish/.config/fish/fishd.784f436e8649
 stow/fish/.config/fish/functions/*
 stow/fish/.config/fish/fishd.*
 !stow/fish/.config/fish/functions/nvm.fish
+stow/fish/.config/fish/conf.d/virtualfish-loader.fish
 
 stow/vim/.vim/.netrwhist
 stow/vim/.vim/autoload
