--- a/stow/i3/.config/i3/i3blocks.conf
+++ b/stow/i3/.config/i3/i3blocks.conf
@@ -42,8 +42,7 @@ label=VOL
 #label=♪
 instance=Master
 #instance=PCM
-interval=once
-signal=1
+interval=repeat
 
 [battery]
 command=~/.config/i3/bin/ui3-battery
